--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.decomposition {
+    width: 85%;
+    margin:auto;
+    
+}
+.columns {
+    display: flex;
+    justify-content: space-between;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.newsLine img{
+    width: 15px;
+    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ a {
+    text-decoration: none;
+    cursor:pointer;
+}
+.newsLine {
+    margin-bottom: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul {
+    list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+.search {
+    height: 40px;
+    text-align: center;
+}
+.search input {
+    height: 100%;
+    width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search button {
+    height: 100%;
+    width: 10%;
 }
